fix: swagger add
